# Log-Tower-Generator

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE.md  README.md  demo.py  pyproject.toml  requirements.txt
benchmarks/: benchmark_suite.py
notebooks/: A3_candidate_process.md  EFG_to_Bell_tutorial.md  EGF_to_Bell_tutorial.md  Gamma_2,2_recursive.md  R3_R4_h-coeff_match.md  notation.md  template_proofs.md
src/: A3_verification.py  An_double_sum_generator_map.py  An_recursive_generator_map.py  P_An_prototype.py  P_Rn_prototype.py  __init__.py  bell_polys.py  double_sum_generator_parallel.py  generator.py
tests/: A4_verification.py  A5_verification.py  run_symbolic_verification.py  run_verification.py  test_verification.py  test_verification_02
walkthrough/: 01_the_alphabet.md  02_holographic_R.md  03_pattern_finding.md  04_closed_forms.md  04_rigorous_proof.md  05_omega_kernel.md  06_multivariate_canonical.md  07_multivariate_gamma_phi.md  08_multivariate_omega.md  09_notation_glossary.md
